// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers invoiceReducer should handle GET_INVOICES 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "createInvoiceError": null,
    "invoice": null,
    "invoices": Array [],
-   "isInvoicesLoading": false,
+   "isInvoicesLoading": true,
  }
`;

exports[`reducers invoiceReducer should handle INVOICE_FAILED 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
-   "createInvoiceError": null,
+   "createInvoiceError": "some error",
    "invoice": null,
    "invoices": Array [],
    "isInvoicesLoading": false,
  }
`;

exports[`reducers invoiceReducer should handle INVOICE_SUCCESSFUL 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers invoiceReducer should handle RECEIVE_INVOICES 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "createInvoiceError": null,
    "invoice": null,
-   "invoices": Array [],
+   "invoices": Array [
+     Object {
+       "r_hash": "123",
+     },
+     Object {
+       "r_hash": "456",
+     },
+   ],
    "isInvoicesLoading": false,
  }
`;

exports[`reducers invoiceReducer should handle SEND_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "createInvoiceError": null,
    "invoice": null,
    "invoices": Array [],
-   "isInvoicesLoading": false,
+   "isInvoicesLoading": true,
  }
`;

exports[`reducers invoiceReducer should handle SET_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "createInvoiceError": null,
-   "invoice": null,
+   "invoice": Object {
+     "r_hash": "123",
+   },
    "invoices": Array [],
    "isInvoicesLoading": false,
  }
`;

exports[`reducers invoiceReducer should handle UPDATE_INVOICE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "createInvoiceError": null,
    "invoice": null,
-   "invoices": Array [],
+   "invoices": Array [
+     Object {
+       "r_hash": "123",
+     },
+   ],
    "isInvoicesLoading": false,
  }
`;

exports[`reducers invoiceReducer should handle initial state 1`] = `
Object {
  "createInvoiceError": null,
  "invoice": null,
  "invoices": Array [],
  "isInvoicesLoading": false,
}
`;
